--- a/shared/i18n/locales/vi_VN/translation.json
+++ b/shared/i18n/locales/vi_VN/translation.json
@@ -617,6 +617,7 @@
   "Account": "Tài khoản",
   "API & Apps": "API & Apps",
   "Details": "Chi tiết",
+  "Authentication": "Authentication",
   "Security": "Bảo mật",
   "Features": "Các tính năng",
   "Members": "Thành Viên",
@@ -1004,6 +1005,19 @@
   "Authorization URL": "Authorization URL",
   "Where users are redirected to authorize this app": "Where users are redirected to authorize this app",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.",
+  "Settings saved": "Đã lưu cài đặt",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "Cho phép thành viên đăng nhập bằng {{ authProvider }}",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "Đã kết nối",
+  "Disabled": "Vô hiệu hóa",
+  "Connect": "Kết nối",
+  "Allow members to sign-in using their email address": "Cho phép thành viên đăng nhập bằng địa chỉ email của họ",
+  "The server must have SMTP configured to enable this setting": "Máy chủ phải được định cấu hình SMTP để bật cài đặt này",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "by {{ name }}",
   "Last used": "Last used",
   "No expiry": "No expiry",
@@ -1012,7 +1026,6 @@
   "Copied": "\u001dĐã sao chép",
   "Are you sure you want to revoke the {{ tokenName }} token?": "Bạn có chắc chắn muốn thu hồi Token {{ tokenName }} không?",
   "Disconnect integration": "Disconnect integration",
-  "Connected": "Đã kết nối",
   "Disconnecting": "Disconnecting",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "Are you sure you want to disconnect the <em>{{ service }}</em> integration?",
   "This will stop sending analytics events to the configured instance.": "This will stop sending analytics events to the configured instance.",
@@ -1083,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "Bạn có thể nhập tệp zip đã được xuất trước đó từ cài đặt Outline - các bộ sưu tập, tài liệu và hình ảnh sẽ được nhập. Trong Outline, mở <em>Xuất</em> trong thanh bên Cài đặt và nhấp vào <em>Xuất dữ liệu</em>.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "Kéo và thả tệp zip từ tùy chọn xuất Markdown trong {{appName}} hoặc nhấp để tải lên",
   "Configure": "Configure",
-  "Connect": "Kết nối",
   "Last active": "Hoạt động lần cuối",
   "Role": "Vai trò",
   "Guest": "Guest",
@@ -1104,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "Left",
   "Right": "Right",
-  "Settings saved": "Đã lưu cài đặt",
   "Logo updated": "Đã cập nhật logo",
   "Unable to upload new logo": "Không thể tải lên biểu trưng mới",
   "Delete workspace": "Delete workspace",
@@ -1209,11 +1220,7 @@
   "Are you sure you want to require invites?": "Bạn có chắc chắn muốn yêu cầu lời mời không?",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "Người dùng mới trước tiên sẽ cần được mời để tạo tài khoản. <em>Vai trò mặc định</em> và <em>Các miền được phép</em> sẽ không còn áp dụng.",
   "Settings that impact the access, security, and content of your workspace.": "Settings that impact the access, security, and content of your workspace.",
-  "Allow members to sign-in with {{ authProvider }}": "Cho phép thành viên đăng nhập bằng {{ authProvider }}",
-  "Disabled": "Vô hiệu hóa",
-  "Allow members to sign-in using their email address": "Cho phép thành viên đăng nhập bằng địa chỉ email của họ",
-  "The server must have SMTP configured to enable this setting": "Máy chủ phải được định cấu hình SMTP để bật cài đặt này",
-  "Access": "Truy cập",
+  "Invites": "Invites",
   "Allow users to send invites": "Allow users to send invites",
   "Allow editors to invite other people to the workspace": "Allow editors to invite other people to the workspace",
   "Require invites": "Yêu cầu lời mời",
