--- a/shared/i18n/locales/fa_IR/translation.json
+++ b/shared/i18n/locales/fa_IR/translation.json
@@ -617,6 +617,7 @@
   "Account": "حساب",
   "API & Apps": "API و برنامه‌ها",
   "Details": "جزئیات",
+  "Authentication": "Authentication",
   "Security": "امنیت",
   "Features": "ویژگی‌ها",
   "Members": "اعضا",
@@ -1004,6 +1005,19 @@
   "Authorization URL": "آدرس URL مجوزدهی",
   "Where users are redirected to authorize this app": "محل هدایت کاربران برای مجوزدهی به این برنامه",
   "Applications allow you to build internal or public integrations with Outline and provide secure access via OAuth. For more details see the <em>developer documentation</em>.": "برنامه‌ها به شما این امکان را می‌دهند که ادغام‌های داخلی یا عمومی با Outline ایجاد کنید و دسترسی ایمن از طریق OAuth فراهم کنید. برای جزئیات بیشتر به <em>مستندات توسعه‌دهنده</em> مراجعه کنید.",
+  "Settings saved": "تنظیمات ذخیره شد",
+  "Are you sure?": "Are you sure?",
+  "Removing": "Removing",
+  "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.": "Removing this authentication provider will prevent members from signing in with {{ authProvider }}.",
+  "Manage how members sign-in to your workspace and which authentication providers are enabled.": "Manage how members sign-in to your workspace and which authentication providers are enabled.",
+  "Allow members to sign-in with {{ authProvider }}": "اجازه به اعضا برای ورود با {{ authProvider }}",
+  "Connect {{ authProvider }} to allow members to sign-in": "Connect {{ authProvider }} to allow members to sign-in",
+  "Connected": "متصل شد",
+  "Disabled": "غیرفعال",
+  "Connect": "اتصال",
+  "Allow members to sign-in using their email address": "اجازه به اعضا برای ورود با استفاده از آدرس ایمیل خود",
+  "The server must have SMTP configured to enable this setting": "برای استفاده از این تنظیمات، سرور باید تنظیمات SMTP را داشته باشد",
+  "Restrictions": "Restrictions",
   "by {{ name }}": "توسط {{ name }}",
   "Last used": "آخرین بار استفاده شده",
   "No expiry": "بدون انقضا",
@@ -1012,7 +1026,6 @@
   "Copied": "کپی شد",
   "Are you sure you want to revoke the {{ tokenName }} token?": "آیا مطمئن هستید که می‌خواهید توکن {{ tokenName }} را لغو کنید؟",
   "Disconnect integration": "قطع ادغام",
-  "Connected": "متصل شد",
   "Disconnecting": "در حال قطع اتصال",
   "Are you sure you want to disconnect the <em>{{ service }}</em> integration?": "آیا مطمئن هستید که می‌خواهید یکپارچه‌سازی <em>{{ service }}</em> را قطع کنید؟",
   "This will stop sending analytics events to the configured instance.": "با این کار، ارسال رویدادهای تحلیلی به نمونهٔ پیکربندی‌شده متوقف می‌شود.",
@@ -1083,7 +1096,6 @@
   "You can import a zip file that was previously exported from an Outline installation – collections, documents, and images will be imported. In Outline, open <em>Export</em> in the Settings sidebar and click on <em>Export Data</em>.": "شما می‌توانید یک فایل zip را که قبلاً از یک نصب Outline خروجی شده است وارد کنید – مجموعه‌ها، اسناد و تصاویر وارد خواهند شد. در Outline، <em>Export</em> را در نوار کناری تنظیمات باز کنید و روی <em>Export Data</em> کلیک کنید.",
   "Drag and drop the zip file from the Markdown export option in {{appName}}, or click to upload": "فایل zip را از گزینه خروجی ها Markdown در {{appName}} بکشید و رها کنید یا برای بارگذاری کلیک کنید",
   "Configure": "پیکربندی",
-  "Connect": "اتصال",
   "Last active": "آخرین فعالیت",
   "Role": "نقش",
   "Guest": "مهمان",
@@ -1104,7 +1116,6 @@
   "Custom emojis can be used throughout your workspace in documents, comments, and reactions.": "Custom emojis can be used throughout your workspace in documents, comments, and reactions.",
   "Left": "چپ",
   "Right": "راست",
-  "Settings saved": "تنظیمات ذخیره شد",
   "Logo updated": "لوگو به روز شد",
   "Unable to upload new logo": "امکان بارگذاری لوگوی جدید وجود نداشت",
   "Delete workspace": "حذف فضای کار",
@@ -1209,11 +1220,7 @@
   "Are you sure you want to require invites?": "آیا مطمئن هستید که می‌خواهید دعوت‌نامه‌ها الزامی شوند؟",
   "New users will first need to be invited to create an account. <em>Default role</em> and <em>Allowed domains</em> will no longer apply.": "کاربران جدید ابتدا باید دعوت شوند تا یک حساب کاربری ایجاد کنند. <em>نقش پیش‌فرض</em> و <em>دامنه‌های مجاز</em> دیگر اعمال نخواهند شد.",
   "Settings that impact the access, security, and content of your workspace.": "تنظیماتی که بر دسترسی، امنیت و محتوای فضای کاری شما تأثیر می‌گذارد.",
-  "Allow members to sign-in with {{ authProvider }}": "اجازه به اعضا برای ورود با {{ authProvider }}",
-  "Disabled": "غیرفعال",
-  "Allow members to sign-in using their email address": "اجازه به اعضا برای ورود با استفاده از آدرس ایمیل خود",
-  "The server must have SMTP configured to enable this setting": "برای استفاده از این تنظیمات، سرور باید تنظیمات SMTP را داشته باشد",
-  "Access": "دسترسی",
+  "Invites": "Invites",
   "Allow users to send invites": "اجازه به کاربران برای ارسال دعوت‌نامه",
   "Allow editors to invite other people to the workspace": "اجازه به ویرایشگران برای دعوت از افراد دیگر به فضای کاری",
   "Require invites": "الزام دعوت‌نامه‌ها",
