--- a/shared/i18n/locales/nl_NL/translation.json
+++ b/shared/i18n/locales/nl_NL/translation.json
@@ -294,9 +294,10 @@
   "{{userName}} published": "{{userName}} gepubliceerd",
   "{{userName}} unpublished": "{{userName}} gedepubliceerd",
   "{{userName}} moved": "{{userName}} verplaatst",
-  "Export started": "Exporteren is begonnen",
   "Your file will be available in {{ location }} soon": "Je bestand is binnenkort beschikbaar op {{ location }}",
   "View": "Bekijk",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "Exporteren is begonnen",
   "A ZIP file containing the images, and documents in the Markdown format.": "Een Zip-bestand met de afbeeldingen en documenten als Markdown bestanden.",
   "A ZIP file containing the images, and documents as HTML files.": "Een Zip-bestand met de afbeeldingen en documenten als HTML-bestanden.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Gestructureerde gegevens die kunnen worden gebruikt om gegevens te migreren naar een andere compatibele {{ appName }} installatie.",
@@ -896,6 +897,7 @@
   "Triggers": "Triggers",
   "Mention users and more": "Gebruikers en meer vermelden",
   "Insert block": "Voeg blok in",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Aanmelden",
   "Continue with Email": "Verdergaan met e-mailadres",
   "Continue with {{ authProviderName }}": "Ga verder met {{ authProviderName }}",
@@ -1027,8 +1029,11 @@
   "Connect": "Verbinden",
   "Allow members to sign-in using their email address": "Sta leden toe om in te loggen met hun e-mailadres",
   "The server must have SMTP configured to enable this setting": "De server moet SMTP hebben geconfigureerd om deze instelling in te schakelen",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Beperkingen",
   "by {{ name }}": "door {{ name }}",
+  "Expired": "Verlopen",
   "Last used": "Laatst gebruikt",
   "No expiry": "Geen vervaldatum",
   "Restricted scope": "Beperkt bereik",
@@ -1055,7 +1060,6 @@
   "Failed to export members": "Leden exporteren is mislukt",
   "Download CSV": "CSV downloaden",
   "Processing": "Verwerken",
-  "Expired": "Verlopen",
   "Completed": "Voltooid",
   "Failed": "Mislukt",
   "All collections": "Alle collecties",
@@ -1236,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "Vereist dat leden uitgenodigd worden voor de werkruimte voordat ze een account kunnen aanmaken met behulp van SSO.",
   "Default role": "Standaard rol",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "De standaard gebruikersrol voor nieuwe accounts. Het wijzigen van deze instelling heeft geen invloed op bestaande gebruikersaccounts.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "Wanneer ingeschakeld, kunnen documenten publiekelijk worden gedeeld op het internet door elk lid van de werkruimte",
   "Viewer document exports": "Bekijkers kunnen documenten exporteren",
   "When enabled, viewers can see download options for documents": "Wanneer ingeschakeld, kunnen kijkers downloadopties voor documenten zien",
@@ -1374,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "Een ID dat de website uniek identificeert in jouw Matomo.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Oeps, je moet de machtigingen in Notion accepteren om {{ appName }} te verbinden met jouw werkruimte. Opnieuw proberen?",
   "Import pages from Notion": "Pagina's importeren uit Notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Voeg toe aan Slack",
   "document published": "document gepubliceerd",
   "document updated": "document bijgewerkt",
