--- a/shared/i18n/locales/sv_SE/translation.json
+++ b/shared/i18n/locales/sv_SE/translation.json
@@ -294,9 +294,10 @@
   "{{userName}} published": "{{userName}} publicerade",
   "{{userName}} unpublished": "{{userName}} opublicerade",
   "{{userName}} moved": "{{userName}} flyttade",
-  "Export started": "Exportering startad",
   "Your file will be available in {{ location }} soon": "Din fil kommer att finnas tillgänglig i {{ location }} snart",
   "View": "Visa",
+  "A link to your file will be sent through email soon": "A link to your file will be sent through email soon",
+  "Export started": "Exportering startad",
   "A ZIP file containing the images, and documents in the Markdown format.": "En ZIP-fil som innehåller bilder och dokument i Markdown-format.",
   "A ZIP file containing the images, and documents as HTML files.": "En ZIP-fil som innehåller bilder och dokument som HTML-filer.",
   "Structured data that can be used to transfer data to another compatible {{ appName }} instance.": "Strukturerade data som kan användas för att överföra data till en annan kompatibel {{ appName }} instans.",
@@ -896,6 +897,7 @@
   "Triggers": "Triggers",
   "Mention users and more": "Nämn användare och mer",
   "Insert block": "Infoga block",
+  "Continue with Passkey": "Continue with Passkey",
   "Sign In": "Logga in",
   "Continue with Email": "Fortsätt med e-post",
   "Continue with {{ authProviderName }}": "Fortsätt med {{ authProviderName }}",
@@ -1027,8 +1029,11 @@
   "Connect": "Anslut",
   "Allow members to sign-in using their email address": "Tillåt medlemmar att logga in med sin e-postadress",
   "The server must have SMTP configured to enable this setting": "Servern måste ha SMTP konfigurerat för att aktivera denna inställning",
+  "Passkeys": "Passkeys",
+  "Allow members to sign-in with a WebAuthn passkey": "Allow members to sign-in with a WebAuthn passkey",
   "Restrictions": "Restrictions",
   "by {{ name }}": "av {{ name }}",
+  "Expired": "Utgånget",
   "Last used": "Senast använd",
   "No expiry": "Ingen utgång",
   "Restricted scope": "Restricted scope",
@@ -1055,7 +1060,6 @@
   "Failed to export members": "Failed to export members",
   "Download CSV": "Download CSV",
   "Processing": "Bearbetar",
-  "Expired": "Utgånget",
   "Completed": "Slutförd",
   "Failed": "Misslyckad",
   "All collections": "Alla samlingar",
@@ -1236,6 +1240,7 @@
   "Require members to be invited to the workspace before they can create an account using SSO.": "Kräv att medlemmar blir inbjudna till arbetsytan innan de kan skapa ett konto med SSO.",
   "Default role": "Standardroll",
   "The default user role for new accounts. Changing this setting does not affect existing user accounts.": "Standardroll för nya konton. Ändring av denna inställning påverkar inte befintliga användarkonton.",
+  "Allow users to sign in with passkeys for passwordless authentication": "Allow users to sign in with passkeys for passwordless authentication",
   "When enabled, documents can be shared publicly on the internet by any member of the workspace": "När detta är aktiverat kan dokument delas offentligt på internet av någon medlem i arbetsytan",
   "Viewer document exports": "Export för visningsdokument",
   "When enabled, viewers can see download options for documents": "När detta är aktiverat kan läsare se hämtningsalternativ för dokument",
@@ -1374,6 +1379,27 @@
   "An ID that uniquely identifies the website in your Matomo instance.": "Ett ID som unikt identifierar webbplatsen i din Matomo instans.",
   "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?": "Whoops, you need to accept the permissions in Notion to connect {{ appName }} to your workspace. Try again?",
   "Import pages from Notion": "Importera sidor från Notion",
+  "Passkey options": "Passkey options",
+  "Registered {{ timeAgo }}": "Registered {{ timeAgo }}",
+  "Passkey updated": "Passkey updated",
+  "Failed to update passkey. Please try again.": "Failed to update passkey. Please try again.",
+  "Give your passkey a memorable name to easily identify it.": "Give your passkey a memorable name to easily identify it.",
+  "Enter passkey name": "Enter passkey name",
+  "Failed to load passkeys": "Failed to load passkeys",
+  "Passkey added successfully": "Passkey added successfully",
+  "Failed to register passkey. Please try again.": "Failed to register passkey. Please try again.",
+  "Rename passkey": "Rename passkey",
+  "Delete passkey": "Delete passkey",
+  "Passkey deleted successfully": "Passkey deleted successfully",
+  "Failed to delete passkey. Please try again.": "Failed to delete passkey. Please try again.",
+  "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.": "Are you sure you want to delete this passkey? You will no longer be able to use it to sign in.",
+  "Registering": "Registering",
+  "Add Passkey": "Add Passkey",
+  "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.": "Passkeys allow you to sign in safely without a password using your device's biometric authentication (Face ID, Touch ID, Windows Hello) or security key.",
+  "Sign-in with Passkey is currently disabled for this team.": "Sign-in with Passkey is currently disabled for this team.",
+  "Enable for all users in Settings -> Authentication.": "Enable for all users in Settings -> Authentication.",
+  "Contact a workspace admin to enable it.": "Contact a workspace admin to enable it.",
+  "You don't have any passkeys yet.": "You don't have any passkeys yet.",
   "Add to Slack": "Lägg till i Slack",
   "document published": "dokument publicerat",
   "document updated": "dokument uppdaterat",
